--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vscode-workspace-switcher",
   "displayName": "vscode-workspace-switcher",
   "description": "Easily switch between workspaces",
-  "version": "1.14.0",
+  "version": "1.15.0",
   "publisher": "sadesyllas",
   "homepage": "https://github.com/sadesyllas/vscode-workspace-switcher",
   "repository": {
@@ -57,6 +57,16 @@
           "type": "boolean",
           "default": true,
           "description": "Whether or not to show the list of workspaces in the explorer tree view container"
+        },
+        "vscodeWorkspaceSwitcher.showDeleteWorkspaceButton": {
+          "type": "boolean",
+          "default": true,
+          "description": "Whether or not to show the `Delete Workspace` button in view containers"
+        },
+        "vscodeWorkspaceSwitcher.showTreeView": {
+          "type": "boolean",
+          "default": false,
+          "description": "Show the workspace entries as a tree of paths in view containers"
         }
       }
     },
@@ -104,6 +114,22 @@
           "light": "assets/icons/light/close.svg",
           "dark": "assets/icons/dark/close.svg"
         }
+      },
+      {
+        "command": "vscodeWorkspaceSwitcher.showListView",
+        "title": "Show List View",
+        "icon": {
+          "light": "assets/icons/light/list.svg",
+          "dark": "assets/icons/dark/list.svg"
+        }
+      },
+      {
+        "command": "vscodeWorkspaceSwitcher.showTreeView",
+        "title": "Show Tree View",
+        "icon": {
+          "light": "assets/icons/light/tree.svg",
+          "dark": "assets/icons/dark/tree.svg"
+        }
       }
     ],
     "viewsContainers": {
@@ -135,55 +161,75 @@
     "menus": {
       "view/title": [
         {
-          "command": "vscodeWorkspaceSwitcher.saveWorkspace",
-          "when": "view == vscodeWorkspaceSwitcherViewInActivityBar",
+          "command": "vscodeWorkspaceSwitcher.showListView",
+          "when": "view == vscodeWorkspaceSwitcherViewInActivityBar && vscodeWorkspaceSwitcherViewContainerTreeViewShow",
           "group": "navigation@1"
         },
         {
-          "command": "vscodeWorkspaceSwitcher.reloadWorkspaces",
+          "command": "vscodeWorkspaceSwitcher.showTreeView",
+          "when": "view == vscodeWorkspaceSwitcherViewInActivityBar && !vscodeWorkspaceSwitcherViewContainerTreeViewShow",
+          "group": "navigation@1"
+        },
+        {
+          "command": "vscodeWorkspaceSwitcher.saveWorkspace",
           "when": "view == vscodeWorkspaceSwitcherViewInActivityBar",
           "group": "navigation@2"
         },
         {
-          "command": "vscodeWorkspaceSwitcher.closeWorkspace",
+          "command": "vscodeWorkspaceSwitcher.reloadWorkspaces",
           "when": "view == vscodeWorkspaceSwitcherViewInActivityBar",
           "group": "navigation@3"
         },
         {
-          "command": "vscodeWorkspaceSwitcher.saveWorkspace",
-          "when": "view == vscodeWorkspaceSwitcherViewInExplorer",
+          "command": "vscodeWorkspaceSwitcher.closeWorkspace",
+          "when": "view == vscodeWorkspaceSwitcherViewInActivityBar",
+          "group": "navigation@4"
+        },
+        {
+          "command": "vscodeWorkspaceSwitcher.showListView",
+          "when": "view == vscodeWorkspaceSwitcherViewInExplorer && vscodeWorkspaceSwitcherViewContainerTreeViewShow",
           "group": "navigation@1"
         },
         {
-          "command": "vscodeWorkspaceSwitcher.reloadWorkspaces",
+          "command": "vscodeWorkspaceSwitcher.showTreeView",
+          "when": "view == vscodeWorkspaceSwitcherViewInExplorer && !vscodeWorkspaceSwitcherViewContainerTreeViewShow",
+          "group": "navigation@1"
+        },
+        {
+          "command": "vscodeWorkspaceSwitcher.saveWorkspace",
           "when": "view == vscodeWorkspaceSwitcherViewInExplorer",
           "group": "navigation@2"
         },
         {
-          "command": "vscodeWorkspaceSwitcher.closeWorkspace",
+          "command": "vscodeWorkspaceSwitcher.reloadWorkspaces",
           "when": "view == vscodeWorkspaceSwitcherViewInExplorer",
           "group": "navigation@3"
+        },
+        {
+          "command": "vscodeWorkspaceSwitcher.closeWorkspace",
+          "when": "view == vscodeWorkspaceSwitcherViewInExplorer",
+          "group": "navigation@4"
         }
       ],
       "view/item/context": [
         {
           "command": "vscodeWorkspaceSwitcher.switchWorkspaceNewWindow",
-          "when": "view == vscodeWorkspaceSwitcherViewInActivityBar",
+          "when": "view == vscodeWorkspaceSwitcherViewInActivityBar && viewItem != folder",
           "group": "inline@1"
         },
         {
           "command": "vscodeWorkspaceSwitcher.deleteWorkspace",
-          "when": "view == vscodeWorkspaceSwitcherViewInActivityBar",
+          "when": "view == vscodeWorkspaceSwitcherViewInActivityBar && viewItem != folder && vscodeWorkspaceSwitcherViewContainerDeleteWorkspaceButtonShow",
           "group": "inline@2"
         },
         {
           "command": "vscodeWorkspaceSwitcher.switchWorkspaceNewWindow",
-          "when": "view == vscodeWorkspaceSwitcherViewInExplorer",
+          "when": "view == vscodeWorkspaceSwitcherViewInExplorer && viewItem != folder",
           "group": "inline@1"
         },
         {
           "command": "vscodeWorkspaceSwitcher.deleteWorkspace",
-          "when": "view == vscodeWorkspaceSwitcherViewInExplorer",
+          "when": "view == vscodeWorkspaceSwitcherViewInExplorer && viewItem != folder && vscodeWorkspaceSwitcherViewContainerDeleteWorkspaceButtonShow",
           "group": "inline@2"
         }
       ]
